@@ -1024,7 +1024,6 @@ public class DFSClient implements FSConstants, java.io.Closeable {
     private int bytesPerChecksum;
     private int checksumSize;
     private boolean gotEOS = false;
-    private boolean sentChecksumOk = false;
     
     byte[] skipBuf = null;
     ByteBuffer checksumBytes = null;
@@ -1057,17 +1056,13 @@ public class DFSClient implements FSConstants, java.io.Closeable {
         }
       }
       
+      boolean eosBefore = gotEOS;
       int nRead = super.read(buf, off, len);
-      if (nRead >= 0 && gotEOS && needChecksum()) {
-        if (sentChecksumOk) {
-           // this should not happen; log the error for the debugging purpose
-           LOG.info(StringUtils.stringifyException(new IOException(
-             "Checksum ok was sent and should not be sent again")));  
-        } else {
-          //checksum is verified and there are no errors.
-          checksumOk(dnSock);
-          sentChecksumOk = true;
-       }
+      
+      // if gotEOS was set in the previous read and checksum is enabled :
+      if (gotEOS && !eosBefore && nRead >= 0 && needChecksum()) {
+        //checksum is verified and there are no errors.
+        checksumOk(dnSock);
       }
       return nRead;
     }
